# nebula

./: .ansible-lint  .gitignore  .pylintrc  .yamllint  CHANGELOG.md  README.md  galaxy.yml  package-lock.json  package.json  pyproject.toml  release.config.js  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  requirements.yml
.config/: ansible-lint.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ansible_molecule.yml  ci.yml  release.yml
molecule/role.bitwarden_desktop.default/: Dockerfile.j2  converge.yml  molecule.yml
molecule/role.bw.default/: Dockerfile.j2  converge.yml  molecule.yml  verify.yml
molecule/role.code.default/: Dockerfile.j2  converge.yml  molecule.yml  verify.yml
molecule/role.dotfiles.default/: Dockerfile.j2  converge.yml  molecule.yml
molecule/role.get_certificate_ownca.default/: Dockerfile.j2  converge.yml  molecule.yml  prepare.yml
molecule/role.gnome.default/: Dockerfile.j2  converge.yml  molecule.yml
molecule/role.go.default/: Dockerfile.j2  converge.yml  molecule.yml  verify.yml
molecule/role.java.default/: Dockerfile.j2  converge.yml  molecule.yml  verify.yml
molecule/role.kde.default/: Dockerfile.j2  converge.yml  molecule.yml
molecule/role.linux_patching.default/: converge.yml  molecule.yml
molecule/role.linux_patching.delegated/: molecule.yml
molecule/role.mattermost_desktop.default/: converge.yml  molecule.yml
molecule/role.nodejs.default/: converge.yml  molecule.yml  verify.yml
playbooks/: cloudinit.yml  server_workspace.md  server_workspace.yml
(+242 files in other folders)
